# gardyn-management

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  clippy.toml  cog.toml  dependency-cruiser.config.mjs  diesel.toml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  vite.config.ts
.config/: hakari.toml
.github/: file-filters.yml  settings.yml
.github/workflows/: build-rust.yml  build-typescript.yml  build.yml  semgrep.yml
crates/database/: Cargo.toml
crates/database/src/: gardyns.rs  lib.rs  plants.rs  schema.rs  slots.rs
crates/database/src/gardyns/: mod.rs
crates/database/src/models/: mod.rs
crates/database/src/plants/: mod.rs
crates/database/src/slots/: mod.rs
crates/my-workspace-hack/: Cargo.toml
crates/website/: Cargo.toml
crates/website/src/: lib.rs  main.rs  server.rs  state.rs
crates/website/src/router/: api_router.rs  html_router.rs  mod.rs
crates/website/src/states/: config.rs  mod.rs  pool_wrapper.rs
crates/website/src/utils/: env.rs  mod.rs  url.rs
crates/workspace-hack/: Cargo.toml
front-end/src/: index.html
front-end/src/components/: app.tsx  column-viewer.tsx  gardyn-viewer.tsx
front-end/src/lib/: column.ts  gardyn.ts  slot.ts
migrations/2025-01-30-051817_species/: down.sql  up.sql
migrations/2025-01-30-051820_plants/: down.sql  up.sql
migrations/2025-01-30-051907_gardyns/: down.sql  up.sql
migrations/2025-01-30-051917_species/: down.sql  up.sql
migrations/2025-01-30-051920_plants/: down.sql  up.sql
migrations/2025-02-06-152106_species/: down.sql  up.sql
migrations/2025-02-06-152254_plant/: down.sql  up.sql
migrations/2025-02-06-152328_gardyn/: down.sql  up.sql
