[package]
name = "database"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2024"
rust-version = "1.85.0"
authors = ["Kristof Mattei"]
description = "Gardyn Management Database"
license-file = "LICENSE"
categories = ["fun"]
keywords = ["random"]
repository = "https://github.com/kristof-mattei/gardyn-management"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
diesel = { version = "2.2.11", features = ["chrono", "postgres"] }
diesel-async = { version = "0.5.2", features = ["deadpool", "postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
