[package]
name = "database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Gardyn Management Database"
license-file.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
diesel = { version = "2.2.11", features = ["chrono", "postgres"] }
diesel-async = { version = "0.6.0", features = ["deadpool", "postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
