[package]
name = "gardyn-management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Gardyn Management"
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "gardyn-management-seed"
path = "src/bin/seed.rs"

[[test]]
name = "gardyn-management"
path = "tests/integration_tests.rs"

[features]
default = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-proxy = { version = "0.5.1", features = ["axum"] }
chrono = { version = "0.4.41" }
color-eyre = "0.6.5"
console-subscriber = { version = "0.4.1", optional = true }
database = { path = "../database" }
diesel = { version = "2.2.12", features = ["chrono", "postgres"] }
diesel-async = { version = "0.6.1", features = ["deadpool", "postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.6", features = ["serde"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# OpenSSL for musl
[target.'cfg(all(any(target_arch="x86_64", target_arch="aarch64"), target_os="linux", target_env="musl"))'.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }
